[package]
name = "huxta"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "huxta"
path = "src/bin/shuttle-bin.rs"

[dependencies]
async-trait = "0.1.74"
axum = "0.7.2"
chrono = { version = "0.4.31", features = ["serde"] }
headers = "0.4.0"
reqwest = "0.11.22"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
shuttle-axum = "0.38.0"
shuttle-runtime = "0.38.0"
shuttle-shared-db = { version = "0.38.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
tokio = "1.28.2"
tracing = "0.1.40"
